manually set input background and font colors to try to fix input color issue on IOS

--- a/src/components/DateZipCodePicker.module.css
+++ b/src/components/DateZipCodePicker.module.css
@@ -27,6 +27,8 @@
   padding: 10px;
   font-family: var(--font-inter), sans-serif;
   font-size: 1rem;
+  background-color: var(--inputBackgroundColor);
+  color: var(--inputFontColor);
   border: 2px solid var(--inputBorder);
   border-radius: 5px;
   outline: none;
