--- a/src/components/SmallDateZipCodePicker.module.css
+++ b/src/components/SmallDateZipCodePicker.module.css
@@ -26,6 +26,8 @@
   padding: 10px;
   font-family: var(--font-inter), sans-serif;
   font-size: 1rem;
+  background-color: var(--inputBackgroundColor);
+  color: var(--inputFontColor);
   border: 2px solid var(--inputBorder);
   border-radius: 5px;
   outline: none;
@@ -41,6 +43,8 @@
   padding: 11px;
   font-family: var(--font-inter), sans-serif;
   font-size: 1rem;
+  background-color: var(--inputBackgroundColor);
+  color: var(--inputFontColor);
   border: 2px solid var(--inputBorder);
   border-radius: 5px;
   outline: none;
